--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"dependencies": {
 		"@quick-threejs/reactive": "^0.1.44",
 		"@quick-threejs/utils": "^0.1.18",
+		"gsap": "^3.13.0",
 		"rxjs": "^7.8.2",
 		"three": "^0.180.0"
 	}
